--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      lang="ru">
 <head th:fragment="head">
     <title>Склад деталей</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <link href="../static/bootstrap.min.css" th:href="@{/bootstrap.min.css}" rel="stylesheet" media="screen" />
-    <link href="../static/style.css" th:href="@{/style.css}" rel="stylesheet" media="screen" />
+    <link href="/static/bootstrap.min.css" th:href="@{/bootstrap.min.css}" rel="stylesheet" media="screen" />
+    <link href="/static/style.css" th:href="@{/style.css}" rel="stylesheet" media="screen" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
 </head>
 </html>
